<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/adam_mukharil_bachtiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="narenda@dicoding.com" />

    <TextView
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/_123456"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/angka_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/love_harry_potter_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_is_harry_potter"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/of_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>